--- a/config/database.yml
+++ b/config/database.yml
@@ -3,26 +3,43 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
+# development:
+#   adapter: sqlite3
+#   database: db/development.sqlite3
+#   pool: 5
+#   timeout: 5000
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: bulletinbored
   pool: 5
+  username: postgres
+  password: password
   timeout: 5000
+  port: 5433
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: bulletinbored
+  username: postgres
+  password: password
   pool: 5
   timeout: 5000
+  port: 5433
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: bulletinbored
+  username: postgres
+  password: password
   pool: 5
   timeout: 5000
+  port: 5433
 
 cucumber:
   <<: *test
