--- a/config/database.yml
+++ b/config/database.yml
@@ -13,10 +13,10 @@ development:
   encoding: unicode
   database: bulletinbored
   pool: 5
-  username: postgres
-  password: password
+  # username: postgres
+  # password: password
   timeout: 5000
-  port: 5433
+  # port: 5433
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -25,21 +25,21 @@ test: &test
   adapter: postgresql
   encoding: unicode
   database: bulletinbored
-  username: postgres
-  password: password
+  # username: postgres
+  # password: password
   pool: 5
   timeout: 5000
-  port: 5433
+  # port: 5433
 
 production:
   adapter: postgresql
   encoding: unicode
   database: bulletinbored
-  username: postgres
-  password: password
+  # username: postgres
+  # password: password
   pool: 5
   timeout: 5000
-  port: 5433
+  # port: 5433
 
 cucumber:
   <<: *test
